# Allen

./:    .#param-search-crosstime-test.sh  .gitignore  .readthedocs.yaml  404.html  BU_GEN3.txt  GEN3.txt  README.md  TD_params.txt  allen.py  behav-preprocessing.py  behav_preprocessing.py  best-rrr-params.csv  cca_analysis.py  cca_plot.py  control-models.py  crosstime-analysis.py  crosstime-plot.py  crosstime-timeslice-plot.py  cv-rank-cross-time.py  cv-rank-time-analysis.py  cv-time-lag-analysis.py  cv-time-lag-plot.py  dvc.yaml  ecephys.csv  histograms.py  index.html  lag-along-time-analysis.py  lags-along-time-plot.py  layer-assignment-analysis.py  layer-interaction-analysis.py  layer-interaction-maxValues.py  layer-interaction-plot.py  layer-interaction-stats.py  layer-rank-analysis.py  layer-rank-plot.py  load_raw_activity_data.py  max-lags-along-time-plot.py  mkdocs.yml  multi-session-plot.py  (+35 more)
DVC/: index.html
about/: index.html
analyses/: __init__.py  cca.py  cca_analysis.py  corr.py  cv-lag-time-selection.py  data_preprocessing.py  imbalanced_data.py  layer_interaction_maxValues.py  layer_rank.py  machine_learning_models.py  pca.py  rrr.py  rrr_time_slice.py
data/: .gitignore
docs/: DVC.md  about.md  index.md  reference.md
explanation/: index.html
how-to-guides/: index.html
plots/: cca.py  tempCodeRunnerFile.py
reference/: index.html
results/: cca_scores.csv  rrr_coefficients.csv
search/: search_index.json
tutorials/: index.html
utils/: __init__.py  ccf_volumes.py  data_io.py  debug.py  directDownload.py  download_allen.py  layers.py  (+9 more)
(+187 files in other folders)
